k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClasssName: nginx
  rules:
  - http:
      paths:
      - path: /vote
      pathType: Prefix
      backend:
        service:
          name: vote
          port:
            number: 80
      - path: /result
      pathType: Prefix
      backend:
        service:
          name: result
          port:
            number: 80
